--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+img {
+  width: 100%;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  background-image: url(https://images.pexels.com/photos/4761352/pexels-photo-4761352.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.cHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.cHeader .cHeader__logo {
+  width: 135px;
+  margin-bottom: 1.5rem;
+}
+.cHeader .cHeader__arroba {
+  color: #ffffff;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 20px;
+}
 
 /*# sourceMappingURL=style.css.map */
