--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,6 +17,10 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .cHeader{
@@ -34,5 +38,55 @@ body{
         color: #ffffff;
         font-family: $font-primary;
         font-size: 20px;
+        text-shadow: 0px 0px 15px #000000b2;
     }
+}
+
+.cMain{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .cMain__btn{
+        font-size: 20px;
+        font-family: $font-primary;
+        width: 310px;
+        background-color: $btn-color;
+        border: none;
+        border-radius: 50px;
+        text-align: center;
+        box-shadow: 0px 0px 15px #000000b2;
+        text-shadow: 0px 0px 15px #000000b2;
+        position: relative;
+
+        .cMain__ico{
+            width: 25px;
+            padding-top: 3px;
+            position: absolute;
+            right: 5%;
+        }
+    }
+
+    .cMain__collapse{
+        width: 275px;
+        background-color: $btn-color;
+        margin-bottom: 30px;
+        border-radius: 10px;
+        border: none;
+        
+        a{
+            text-decoration: none;
+            color: #ffffff;
+            font-family: $font-primary;
+            font-size: 20px;
+            line-height: 2rem;
+            text-shadow: 0px 0px 15px #000000b2;
+        }
+    }
+
+    .cMain__icoInsta{
+        width: 45px;
+    }
+
 }
