--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ img {
 body {
   width: 100%;
   height: 100vh;
-  background-image: url(https://images.pexels.com/photos/4761352/pexels-photo-4761352.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-image: url(../imgs/background.jpg);
+  background-attachment: fixed;
   background-color: #000;
   background-position: center;
   background-repeat: no-repeat;
@@ -51,7 +52,7 @@ body {
 .cMain .cMain__btn {
   font-size: 20px;
   font-family: "Bebas Neue", sans-serif;
-  width: 310px;
+  width: 340px;
   background-color: rgba(148, 147, 147, 0.568627451);
   border: none;
   border-radius: 50px;
@@ -67,7 +68,7 @@ body {
   right: 5%;
 }
 .cMain .cMain__collapse {
-  width: 275px;
+  width: 300px;
   background-color: rgba(148, 147, 147, 0.568627451);
   margin-bottom: 30px;
   border-radius: 10px;
@@ -93,6 +94,8 @@ body {
 }
 .cFooter a {
   color: darkgray;
+  font-weight: bold;
+  text-shadow: 0px 0px 5px black;
 }
 
 /*# sourceMappingURL=style.css.map */
